Fixed horizontal scroll container

--- a/src/app/components/ranking/Rankings.module.scss
+++ b/src/app/components/ranking/Rankings.module.scss
@@ -4,18 +4,19 @@
 
 .dmBody {
     background-color: var(--body-color-primary);
-    height: calc(100%);
+    height: auto;
     padding: 30px;
     border-radius: 10px;
-    overflow-y: auto;
+    overflow-x: auto;
     margin-top: 20px;
 }
 
 .dmRankingsGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-auto-flow: column;
+    grid-auto-columns: 230px;
     gap: 2em; 
-    
+    overflow-x: scroll;
     justify-items: center;
 }
 
